<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Battleship</string>
    <string name="action_settings">Settings</string>
    <string name="fleet">Fleet</string>
    <string name="aircraft_carrier">Aircraft Carrier (5)</string>
    <string name="battleship">Battleship (4)</string>
    <string name="destroyer">Destroyer (3)</string>
    <string name="submarine">Submarine (3)</string>
    <string name="patrol_boat">Patrol Boat (2)</string>
    <string name="you">You</string>
    <string name="opponent">Opponent</string>
    <string name="floating">O</string>
    <string name="sank">X</string>
    <string name="place_ships">Please place your ships!</string>
    <string name="direction_origin">Direction From Origin</string>
    <string name="up">Up</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="place_ship">Place Ship</string>
    <string name="current_config">Current Configuration</string>
    <string name="ship">Ship</string>
    <string name="A1">A1</string>
	<string name="start_game">Start Game</string>
	<string name="placement">Placement</string>
	<string name="return_to_menu">Return to Menu</string>
	<string name="ask_settings">ASK Settings</string>
	<string name="ask_speed">ASK Speed</string>
	<string name="ask_on_off">Turn on ASK Scanning Library</string>
	<string name="ask_player_one">Player 1 ASK Scanning Library</string>
	<string name="ask_player_two">Player 2 ASK Scanning Library</string>
	<string name="game_mode">Game Mode</string>
	<string name="game_settings">Game Settings</string>
	<string name="game_type">Game Type</string>
	<string name="game_type_salvo">Salvo</string>
	<string name="game_type_fire_until_miss">Fire Until Miss</string>
	<string name="game_declare_type">Declare Type</string>
	<string name="play_music">Play Music</string>
	
</resources>
