<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="50sp" />

    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:onClick="startGame"
        android:text="@string/start_game" />
    
	<Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:onClick="placement"
        android:text="@string/placement" />

    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:onClick="settings"
        android:text="@string/action_settings" />

</LinearLayout>