<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <PreferenceCategory
	    android:title="@string/game_settings"
	    android:key="game_settings" >
	    
		<ListPreference
		    android:title="@string/game_variations"
			android:summary="Select the game type"
			android:key="game_type"
			android:defaultValue="Classic"
			android:entries="@array/game_variations"
			android:entryValues="@array/game_variations_values" />
        
	</PreferenceCategory>
    
	<PreferenceCategory
	    android:title="@string/ask_settings"
	    android:key="ask_settings" >
	   
	    <EditTextPreference
	        android:id="@+id/ask_speed"
	        android:key="ask_speed"
	        android:title="@string/ask_speed"
	        android:summary="Change the scanning speed of ASK"
	        android:dialogTitle="Scanning Speed (ms)"
	        android:defaultValue="5000" />
	    
	</PreferenceCategory>
	
</PreferenceScreen>
